# newevoll

./: ABLATION_ANALYSIS_GUIDE.md  ARCHITECTURE.md  DATA_COLLECTION_GUIDE.md  EC2_SETUP_GUIDE.md  G5_2XLARGE_OPTIMIZED.md  QUICKSTART_EC2.md  RESULTS.MD  SETUP_MUJOCO_EC2.md  SYSTEM_DESIGN.MD  WANDB_SETUP.md  WANDB_VISUALIZATION_GUIDE.md  actionmap.txt  add_wandb_integration.py  bd5x5.json  benchmark_ablation_spaces.py  benchmark_best_vs_sparse.py  benchmark_evolved_vs_sparse.json  benchmark_evolved_vs_sparse.py  benchmark_parallel.json  benchmark_parallel.py  benchmark_tasks.py  check_failures.py  fix_mujoco_xmls.sh  monitor_run.sh  onlineintrsic.txt  paper.md  plot_ablation_clean.py  plot_ablation_spaces.py  plot_evolution.py  profile_both.sh  profile_go1.py  profile_panda.py  pyproject.toml  quick_fix_setup.sh  requirements.txt  run.py  run_ablation_comparison.sh  run_ablations.sh  run_all_noevo_ablation.sh  run_experiments.sh  (+11 more)
configs/: default.yaml  easy_pickup.yaml  easy_pickup_fullevo.yaml  easy_pickup_noevo.yaml  go1_push_recovery.yaml  go1_push_recovery_noevo.yaml  go1_test_cascade.yaml  hard_rule_chain.yaml  hard_rule_chain_noevo.yaml  medium_place_near.yaml  medium_place_near_noevo.yaml  panda_pick_and_track.yaml  panda_pick_and_track_noevo.yaml
contexts/: go1_push_recovery_context.md  panda_pick_and_track_context.md  xminigrid_context.md
mdp_discovery/: __init__.py  config.py  controller.py  crash_filter.py  database.py  evaluator.py  evolution_trace.py  llm_client.py  nn.py  (+7 more)
mdp_discovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+492 files in other folders)
